--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
   <title>Simple Web App</title>
 </head>
 <body>
-  <h1>Hello from Docker!</h1>
+  <h1>Hello from Docker! It work now :></h1>
 </body>
 </html>
