update service backend test

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Simple Web App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Theareak Click</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Hello from Docker! It work now :></h1>
+  <h1>Welcome to Theareak Click</h1>
+  <p>This is a static page served by Express.js</p>
+  <button onclick="sayHello()">Click Me</button>
+  <script src="script.js"></script>
 </body>
 </html>
