--- a/public/index.html
+++ b/public/index.html
@@ -261,7 +261,7 @@
                 <div class="content-card">
                     <div id="main-content">
                         <!-- Home Dashboard Content -->
-                        <div class="content-title">Welcome to TaskHub hello update</div>
+                        <div class="content-title">Welcome to TaskHub hello</div>
                         <p style="color: #718096; font-size: 1.1rem; margin-bottom: 2rem;">Your all-in-one platform for productivity and development tools</p>
                         
                         <div class="feature-grid">
