--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TaskHub - Multi-Task Management Platform</title>
+    <title>TaskHub 2- Multi-Task Management Platform</title>
     <style>
         * {
             margin: 0;
